--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,17 +4,33 @@
   "customizations": {
         "vscode": {
             "extensions": [
-                "james-yu.latex-workshop",
-                "nickfode.latex-formatter",
-                "mathematic.vscode-latex",
                 "ms-azuretools.vscode-docker",
                 "meezilla.json",
-                "valentjn.vscode-ltex",
                 "entuent.fira-code-nerd-font",
-                "akamud.vscode-theme-onedark",
+                "beardedbear.beardedtheme",
                 "pkief.material-icon-theme",
                 "eamodio.gitlens",
-                "tecosaur.latex-utilities"
+                "kotlinlang.kotlin",
+                "fwcd.kotlin",
+                "mathiasfrohlich.kotlin",
+                "esafirm.kotlin-formatter",
+                "github.copilot",
+                "github.copilot-chat",
+                "github.copilot-labs",
+                "swiftlang.swift-vscode",
+                "python.python",
+                "ms-python.vscode-pylance",
+                "ms-python.python",
+                "ms-python.vscode-python-envs",
+                "ms-python.debugpy",
+                "redhat.java",
+                "vscjava.vscode-java-pack",
+                "vscjava.vscode-java-debug",
+                "vscjava.vscode-java-test",
+                "vscjava.vscode-maven",
+                "vscjava.vscode-java-dependency",
+                "dart-code.dart-code",
+                "formulahendry.code-runner"
             ],
     },
 },
