--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,7 @@
                 "github.copilot",
                 "github.copilot-chat",
                 "github.copilot-labs",
+                "github.vscode-github-actions",
                 "swiftlang.swift-vscode",
                 "python.python",
                 "ms-python.vscode-pylance",
