--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,40 +1,46 @@
 {
   "name": "fibonacci-kotlin Dev Container",
-  "image": "mcr.microsoft.com/devcontainers/base:ubuntu:22.04",
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
   "customizations": {
-        "vscode": {
-            "extensions": [
-                "ms-azuretools.vscode-docker",
-                "meezilla.json",
-                "entuent.fira-code-nerd-font",
-                "beardedbear.beardedtheme",
-                "pkief.material-icon-theme",
-                "eamodio.gitlens",
-                "kotlinlang.kotlin",
-                "fwcd.kotlin",
-                "mathiasfrohlich.kotlin",
-                "esafirm.kotlin-formatter",
-                "github.copilot",
-                "github.copilot-chat",
-                "github.copilot-labs",
-                "github.vscode-github-actions",
-                "swiftlang.swift-vscode",
-                "python.python",
-                "ms-python.vscode-pylance",
-                "ms-python.python",
-                "ms-python.vscode-python-envs",
-                "ms-python.debugpy",
-                "redhat.java",
-                "vscjava.vscode-java-pack",
-                "vscjava.vscode-java-debug",
-                "vscjava.vscode-java-test",
-                "vscjava.vscode-maven",
-                "vscjava.vscode-java-dependency",
-                "dart-code.dart-code",
-                "formulahendry.code-runner"
-            ],
-    },
-},
-  "postCreateCommand": "mkdir -p .vscode && cp /workspaces/fibonacci-kotlin/.devcontainer/vscode/settings.json .vscode/ && sudo apt-get update && sudo apt-get install -y wget unzip && wget https://download.jetbrains.com/kotlin/compiler/kotlin-compiler-1.9.10.zip -O /tmp/kotlin-compiler.zip && unzip /tmp/kotlin-compiler.zip -d /opt/kotlin && rm /tmp/kotlin-compiler.zip",
+    "vscode": {
+      "extensions": [
+        "ms-azuretools.vscode-docker",
+        "meezilla.json",
+        "entuent.fira-code-nerd-font",
+        "beardedbear.beardedtheme",
+        "pkief.material-icon-theme",
+        "eamodio.gitlens",
+        "kotlinlang.kotlin",
+        "fwcd.kotlin",
+        "mathiasfrohlich.kotlin",
+        "esafirm.kotlin-formatter",
+        "github.copilot",
+        "github.copilot-chat",
+        "github.copilot-labs",
+        "github.vscode-github-actions",
+        "ms-azuretools.vscode-containers",
+        "swiftlang.swift-vscode",
+        "python.python",
+        "ms-python.vscode-pylance",
+        "ms-python.python",
+        "ms-python.vscode-python-envs",
+        "ms-python.debugpy",
+        "redhat.java",
+        "vscjava.vscode-java-pack",
+        "vscjava.vscode-java-debug",
+        "vscjava.vscode-java-test",
+        "vscjava.vscode-maven",
+        "vscjava.vscode-java-dependency",
+        "dart-code.dart-code",
+        "formulahendry.code-runner"
+      ],
+      "settings": {
+        "workbench.colorTheme": "Panda Theme"
+      }
+    }
+  },
+  "postCreateCommand": "mkdir -p .vscode && cp .devcontainer/panda-theme.json .vscode/panda-theme.json || true",
   "remoteUser": "vscode"
 }
