--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,7 +37,7 @@
         "formulahendry.code-runner"
       ],
       "settings": {
-        "workbench.colorTheme": "Panda Theme"
+        "workbench.colorTheme": "Bearded Theme Coffee Reversed"
       }
     }
   },
