--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,3 @@
 FROM ubuntu:latest
 
-RUN apt-get update && apt-get install -y curl zip unzip
-RUN curl -s "https://get.sdkman.io" | bash
-
+RUN echo "hello world"
